--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -5,7 +5,7 @@ Download file installation file at <a href='http://rdfonthego.googlecode.com/fil
 
 After installation, run application 'RDF on the go', the application will load data file at <a href='http://rdfonthego.googlecode.com/files/data.n3'>http://rdfonthego.googlecode.com/files/data.n3</a>, so it needs internet connection.
 
-The demo video can be found at:
+Following is the demo video of the prototype :
 
 <wiki:video url="http://www.youtube.com/watch?v=5oc4w_IqkKM"/>
 
