--- a/papers/spim2u/spim2u.bib
+++ b/papers/spim2u/spim2u.bib
@@ -13,3 +13,22 @@
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
 } 
+
+
+@inproceedings{Cudre-Mauroux:2009,
+ author = {Cudr\'{e}-Mauroux, Philippe and Haghani, Parisa and Jost, Michael and Aberer, Karl and De Meer, Hermann},
+ title = {idMesh: graph-based disambiguation of linked data},
+ booktitle = {Proceedings of the 18th international conference on World wide web},
+ series = {WWW '09},
+ year = {2009},
+ isbn = {978-1-60558-487-4},
+ location = {Madrid, Spain},
+ pages = {591--600},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1526709.1526789},
+ doi = {http://doi.acm.org/10.1145/1526709.1526789},
+ acmid = {1526789},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {emergent semantics, entity disambiguation, linked data, peer data management},
+} 
