Edited wiki page Tutorial through web user interface.

--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -1,4 +1,4 @@
-#summary This tutorial will explain to you how to use RDFonthego packages.
+#summary This tutorial will explain how to use RDFonthego packages.
 
 = Introduction =
 
