--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -6,7 +6,7 @@
  For more information: <a href='http://iswc2010.semanticweb.org/pdf/503.pdf'>RDF On the Go</a>
 
 =1. Setup project:=
-Step 1:<a href='http://developer.android.com/sdk/installing.html'>Create a Android project.</a>
+==Step 1:<a href='http://developer.android.com==/sdk/installing.html'>Create a Android project.</a>
  RDFOnthego requires Android 2.1 or later version. And don't forget to add WRITE_EXTERNAL_STORAGE permission to your project.
 Step 2: Adding rdfonthego external jar file to your Android project
   RDFOnthego uses Berkeley DB for storing RDF data
