--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -5,29 +5,23 @@
  RDF Onthego is project to build RDF store and query processor on Android phone.
  For more information: <a href='http://iswc2010.semanticweb.org/pdf/503.pdf'>RDF On the Go</a>
 
-=1. Setup project:=
-==Step 1:<a href='http://developer.android.com==/sdk/installing.html'>Create a Android project.</a>
+==1. Setup project:==
+ * Step 1:<a href='http://developer.android.com/sdk/installing.html'>Create a Android project.</a>
  RDFOnthego requires Android 2.1 or later version. And don't forget to add WRITE_EXTERNAL_STORAGE permission to your project.
-Step 2: Adding rdfonthego external jar file to your Android project
-  RDFOnthego uses Berkeley DB for storing RDF data
-  
-  - <a href='http://rdfonthego.googlecode.com/files/je-android-4.1.10.jar'>Berkeley JE for Android.</a>  (Required!)
  
- Jena and ARQ Semantic Web Toolkit built for Android RDF Store
+ * Step 2: Adding rdfonthego external jar file to your Android project
  
- - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.iri.jar'>The Jena IRI Library.</a> (Required!)
+  - <a href='http://rdfonthego.googlecode.com/files/je-android-4.1.10.jar'>je-andoird-4.1.10.jar</a>. Berkeley DB JE for Android (Required!)
  
- - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.core.jar'>RDF Store Engine.</a>  (Required!)
-  
- Spatial packages if you want to work with Geo data
+  - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.iri.jar'>deri.org.rdfonthego.iri.jar</a> Jena IRI library build for rdfonthego(Required!)
  
- - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.arq.jar'>SPARQL Engine.</a> (Optional!)
+ - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.core.jar'>deri.org.rdfonthgo.core.jar</a> Jena SW toolkit with RDF store built in(Required!)
+
+ - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.arq.jar'>deri.org.rdfonthego.arq.jar</a> ARQ packages for RDF store (Required!)
  
- - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.spatial.jar'>Spatial Engine.</a> (Optional!)
-  
- And Lucene package
- 
- - <a href='http://rdfonthego.googlecode.com/files/lucene-core-2.3.1.jar'>Lucene package</a> and <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.lucene.jar'>Lucene Jena</a> (Optional!)
+ - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.spatial.jar'>deri.org.rdfonthego.spatial.jar</a> (Optional!). The spatial indexing packages.
+
+ - <a href='http://rdfonthego.googlecode.com/files/lucene-core-2.3.1.jar'>lucene-core-2.3.1.jar</a> and <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.lucene.jar'>deri.org.rdfonthego.lucene.jar</a> (Optional!) The lucene packages.
 
  
 = 2. Working with RDFOnthego =
