--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -13,12 +13,8 @@
  
   - <a href='http://rdfonthego.googlecode.com/files/je-android-4.1.10.jar'>je-andoird-4.1.10.jar</a>. Berkeley DB JE for Android (Required!)
  
-  - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.iri.jar'>deri.org.rdfonthego.iri.jar</a> Jena IRI library build for rdfonthego(Required!)
- 
- - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.core.jar'>deri.org.rdfonthgo.core.jar</a> Jena SW toolkit with RDF store built in(Required!)
+  - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.core.jar'>deri.org.rdfonthgo.core.jar</a> Jena SW toolkit with RDF store built in(Required!)
 
- - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.arq.jar'>deri.org.rdfonthego.arq.jar</a> ARQ packages for RDF store (Required!)
- 
  - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.spatial.jar'>deri.org.rdfonthego.spatial.jar</a> (Optional!). The spatial indexing packages.
 
  - <a href='http://rdfonthego.googlecode.com/files/lucene-core-2.3.1.jar'>lucene-core-2.3.1.jar</a> and <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.lucene.jar'>deri.org.rdfonthego.lucene.jar</a> (Optional!) The lucene packages.
@@ -33,10 +29,14 @@
 === 2.2 Adding Triples ===
  There are 3 ways to add triple to graph(store): 
  * Add a single triple to graph:
-<ol>  BDBGraph graph; </ol>
 <ol>  Node s,p,o;</ol>
 <ol>  Triple = new Triple (s,p,o);</ol>
 <ol>  graph.add(t); </ol>
  
+ * Load Triple from file:
+      graph.load(String filePath, String baseUri)
+  
+ * Load Triple from an URL
+      graph.load(String url, String baseUri)
 
  
