--- a/wiki/Example.wiki
+++ b/wiki/Example.wiki
@@ -10,34 +10,36 @@
 = Details =
  In this example, we used RDF store to store the foaf profile. Foaf profiles are converted to n-triples by sindice any23 api. To avoid type the URL,we are using QRCode scanner api. The QRCode generator plug-in for FireFog is easily found by google.com, and QRCode scanner for android at android market.
 
-To get foaf id:
+ * Adding triples to store:
 
-scan.setOnClickListener(new Button.OnClickListener(){
- @Override
+ graph	=	new BDBGraph("example");
+
+ graph.load("http://api.sindice.com/any23/any23/?format=ntriples&uri="+contactFoaFid, contactFoaFid);
+
+ graph.sync();
+
+ * Query name of the foafid 
+
+ graph		=	new BDBGraph("example");
  
- public void onClick(View v){
+ Model model	=	new ModelCom(graph);
+			
+ String queryString = StrUtils.strjoin("\n", 
+  "PREFIX foaf:    <http://xmlns.com/foaf/0.1/>" ,
+  "SELECT DISTINCT ?name {" ,
+  "  ?x foaf:name ?name.",
+  "}") ;
+		        
+ Query query = 	QueryFactory.create(queryString) ;
+ nameListString	=	new ArrayList<String>() ;
+		  	        
+ QueryExecution qExec = QueryExecutionFactory.create(query, model) ;
+		    
+ for(ResultSet itr=qExec.execSelect();itr.hasNext();){
+     QuerySolution sol=itr.next();
+     nameListString.add(sol.get("name").toString());
+ }
 
- Intent intent = new Intent("com.google.zxing.client.android.SCAN");
+ qExec.close();    
 
- intent.putExtra("SCAN_MODE", "QR_CODE_MODE");
-
- startActivityForResult(intent, 0);} 
- });
-}
-	
-
-@Override
-
-public void onActivityResult(int requestCode, int resultCode, Intent intent){
-
- super.onActivityResult(requestCode, resultCode,intent);
-
- if (requestCode == 0){
-   if (resultCode == RESULT_OK){
-        foafURL = intent.getStringExtra("SCAN_RESULT");    
-        new AddContact(FoafCollector.this,foafURL).execute();
-   }else if (resultCode == RESULT_CANCELED){
-        foafURL =	null;
-   }
-}
-}
+ adapter = new ArrayAdapter<String> FoafCollector.this,R.layout.listview,nameListString);
