--- a/papers/spim2u/eswc2012.tex
+++ b/papers/spim2u/eswc2012.tex
@@ -85,13 +85,22 @@ contain at least 70 and at most 150 words. It should be written using the
 [Intro here]
 
 \subsection{Motivated Use cases}
- PIM 
- 
 
+ Mobile devices can store a lot of personal infromation such as contact list, message, email,   social network account, photo, video.
+The idea is from the Semantic Desktop. With the apprance of RDF store in mobile, that we are able to link mobile applications together and intergrate with the social network.
+
+People tend to use thier mobile device more often than the desktop. 
+
+People tend to use the mobile device to connect to the social network. 
+ 
+Able to tag people to a meeting, a photo, a video.
 
  - Contact list management. 
     + Contact list can be synchronize from social network
     + Contact list can be convert from local phone contact
+Able to detect the contact node in the social network.
+
+
 
  The problem is how to match them together. This can be solve the issue how to detect the relationship between phone owner and his friend.
 
