--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -192,9 +192,13 @@
     		
  {{{List<String>	places =	i.getWithin(53.285029, -9.081154, 53.294469, -9.067422);}}}
     			
- {{{for (int j = 0; j < places.size(); j++){ }}}
+ {{{for (int j = 0; j < places.size(); j++) { }}}
   
- {{{System.out.println(i + " " + places.get(j).toString()); }}}}
+ {{{System.out.println(i + " " + places.get(j).toString()); }}}
+
+ {{{}}}}
+
+==== 2.3.4 Lucene Index ====
     			
 For more details please take a look at our example. How to build a simple android application with rdfonthego.
  
