--- a/wiki/Example.wiki
+++ b/wiki/Example.wiki
@@ -8,56 +8,60 @@
 
 
 = Details =
- In this example, we used RDF store to store the foaf profile. Foaf profiles are converted to n-triples by sindice any23 api. To avoid type the URL,we are using QRCode scanner api. The QRCode generator plug-in for FireFog is easily found on google.com, and QRCode scanner for android at android market.
+ In this example, we used RDF store to store the foaf profile. Foaf profiles are converted to n-triples by sindice any23 api. To avoid type the URL,we are using QRCode scanner api. The QRCode generator plug-in for FireFog is easily found on google.com , and QRCode scanner for android at android market.
 
  * Adding triples to store:
  
- //Create or open a store name "example" 
- graph	=	new BDBGraph("example");
-
- //Retrieve data after converted from any23 api.
+ {{{ //Create or open a store name "example" }}}
  
-graph.load("http://api.sindice.com/any23/any23/?format=ntriples&uri="+contactFoaFid, contactFoaFid);
+ {{{ graph	=	new BDBGraph("example");}}}
 
- //Save the graph
+ {{{ //Retrieve data after converted from any23 api.}}}
  
- graph.sync();
+ {{{graph.load("http://api.sindice.com/any23/any23/?format=ntriples&uri="+contactFoaFid, contactFoaFid);}}}
+
+ {{{//Save the graph}}}
+ 
+ {{{graph.sync();}}}
 
  * Query name of the foafid 
 
- //Open the store name "example"
+ {{{//Open the store name "example"}}}
 
- graph		=	new BDBGraph("example");
+ {{{graph = new BDBGraph("example");}}}
  
- //Create the model 
+ {{{//Create the model}}}
 
- Model model	=	new ModelCom(graph);
+ {{{Model model	=	new ModelCom(graph);}}}
 		
- //This SPARQL query, searching all the name in the store	
+ {{{ //This SPARQL query, searching all the name in the store	}}}
 
- String queryString = StrUtils.strjoin("\n", 
+ {{{String queryString = StrUtils.strjoin("\n", }}}
   
-  "PREFIX foaf:    <http://xmlns.com/foaf/0.1/>" ,
+ {{{"PREFIX foaf:    <http://xmlns.com/foaf/0.1/>" ,}}}
  
-  "SELECT DISTINCT ?name {" ,
+ {{{"SELECT DISTINCT ?name {" ,}}}
   
-  "  ?x foaf:name ?name.",
+ {{{"?x foaf:name ?name.", }}}
   
-  "}") ;
+ {{{"}") ;}}}
 		        
- //Create query
+ {{{//Create query}}}
 
- Query query = 	QueryFactory.create(queryString) ;
+ {{{Query query = 	QueryFactory.create(queryString) ;}}}
 		
- //Create Execution query  
+ {{{ //Create Execution query  }}}
 	        
- QueryExecution qExec = QueryExecutionFactory.create(query, model) ;
+ {{{QueryExecution qExec = QueryExecutionFactory.create(query, model) ;}}}
 		   
- //Get the result
+ {{{ //Get the result}}}
 
- for(ResultSet itr=qExec.execSelect();itr.hasNext();){
-     QuerySolution sol=itr.next();
-     nameListString.add(sol.get("name").toString());
- }
+ {{{for(ResultSet itr=qExec.execSelect();itr.hasNext();){ }}}
 
- qExec.close();    
+ {{{QuerySolution sol=itr.next(); }}}
+
+ {{{ nameListString.add(sol.get("name").toString());}}}
+
+ {{{}}}}
+
+ {{{qExec.close();}}}
